# catalog-insight-product-data-pipeline

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run_pipeline.py  scrapy.cfg
.github/workflows/: tests.yml
catalog_scraper/: __init__.py  items.py  pipelines.py  settings.py
catalog_scraper/spiders/: __init__.py  books.py
dashboard/: app.py  data.py
data/sample/: README.md  books.sqlite  books_report.xlsx
docs/: PORTFOLIO.md
exporter/: __init__.py  excel.py
tests/: test_dashboard_smoke.py  test_exports_and_dashboard.py  test_pipelines.py  test_run_pipeline.py  test_spider.py
tests/fixtures/: book_detail.html
