[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-insight"
version = "1.0.0"
description = "A responsible product-data scraper with SQLite, Excel, and Streamlit outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Roy" }]
dependencies = [
  "itemadapter>=0.12,<1",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<4",
  "Scrapy>=2.17,<3",
  "streamlit>=1.41,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["catalog_scraper*", "dashboard*", "exporter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
